VSE Mask Modifier don't move with video-Clip #43986

Closed
opened 2015-03-13 15:49:51 +01:00 by Dennis Schiffer · 12 comments

System Information
Windows 8.1, AMD Radeon R9 200 Series

Blender Version
Broken: 2.73a bbf09d9

Short description of error
When I use the Strip Modifier --> Mask and put a animated mask, I created before in the movie clip editor, to the clip I want to mask out, then the mask is not in sync with the Clip. If I move the Clip at the Timeline, the mask animation is still at the same frames on the Timelin, it was before I moved the movie-clip.

Exact steps for others to reproduce the error

  1. Open Blender
  2. Go to Preset Motion Tracking
  3. Load a movie clip (in my case a H264 coded .MOV file)
  4. Set scene Frames
  5. Tab into Mask mode.
  6. Create and animate a new Mask (in my case i used it for seperateing a person from the Background)
  7. Go to Preset: Video Editing
  8. Add the movie via Add --> Clip or Add --> movie
  9. Add Strip Modifier --> Mask and select your created mask.
    If you placed your Clip at Frame 0 (not 1!), The mask is in synk with the clip, if you place the clip anyware else, mask and clip are out of sync.
  10. If you move the clip at the timeline, you only move the Video, mask still stays at the same place or frames as befor moveing.

"Refresh Sequencer" and reloading the mask will not work. Before I reported this bug, I tried it 3 times in different projects.

**System Information** Windows 8.1, AMD Radeon R9 200 Series **Blender Version** Broken: 2.73a bbf09d9 **Short description of error** When I use the Strip Modifier --> Mask and put a animated mask, I created before in the movie clip editor, to the clip I want to mask out, then the mask is not in sync with the Clip. If I move the Clip at the Timeline, the mask animation is still at the same frames on the Timelin, it was before I moved the movie-clip. **Exact steps for others to reproduce the error** 1. Open Blender 2. Go to Preset Motion Tracking 3. Load a movie clip (in my case a H264 coded .MOV file) 4. Set scene Frames 5. Tab into Mask mode. 6. Create and animate a new Mask (in my case i used it for seperateing a person from the Background) 7. Go to Preset: Video Editing 8. Add the movie via Add --> Clip or Add --> movie 9. Add Strip Modifier --> Mask and select your created mask. If you placed your Clip at Frame 0 (not 1!), The mask is in synk with the clip, if you place the clip anyware else, mask and clip are out of sync. 10. If you move the clip at the timeline, you only move the Video, mask still stays at the same place or frames as befor moveing. "Refresh Sequencer" and reloading the mask will not work. Before I reported this bug, I tried it 3 times in different projects.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @dennisschiffer58

Added subscriber: @dennisschiffer58
Bastien Montagne self-assigned this 2015-03-13 16:15:48 +01:00

Uh, actually, I hit the same issue a few days ago… Will try to find some time to investigate, probably not that complicated (though you never know with VSE).

Uh, actually, I hit the same issue a few days ago… Will try to find some time to investigate, probably not that complicated (though you never know with VSE).

This issue was referenced by 6786ef6783

This issue was referenced by 6786ef6783fa924d1ad0625d557f0c1fcb5d9ede

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6786ef6783.

Closed by commit 6786ef6783.

Added subscriber: @DanteLeoncini

Added subscriber: @DanteLeoncini

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

tested on ubuntu 18.04 64bits

Good, This error is still in blender 2.79 as in blender 2.8.
I have been using masks in blender for a long time and this problem always existed.
At first I thought it was a problem with the mp4. But this happens in sequences of png and exr images as well.

The mask looks bad in both the "Movie Clip Editor" and in the render of the Composition, when moving a vertex of the mask and pressing the escape key, the mask is displayed correctly. This makes it very difficult to find errors, because when looking at the "movie clip editor" it seems that the mask is always wrong, when reality is right. The only way to see the final result is to render or move frame by frame and move the vertices to see if that frame is fine.
Now I'm trying to finish a sequence of 746 frames. Because of this problem I had to create a keyframe in all the boxes to be sure that the cut is perfect, which took me several days. If this error did not exist it would have been easy to see which frames did not lack any keyframes and save a lot of work

Mensaje original:
probado en ubuntu 18.04 64bits
Buenas, Este error sigue estando tanto en blender 2.79 como en blender 2.8.
hace mucho que uso las máscaras en blender y este problema siempre existió.
Al principio pensé que era un problema con los mp4. Pero esto ocurre en secuencias de imágenes png y exr también.

La máscara se ve mal tanto en el "Movie Clip Editor" como en el render de la Composición, al mover un vértice de la máscara y presionar la tecla escape, la mascara se muestra correctamente. Esto hace muy dificil encontrar errores, ya que al ver el "movie clip editor" parece que la mascara esta siempre mal, cuando enrealidad esta bien. La unica forma de ver el resultado final es hacer un render o moverse cuadro por cuadro e ir moviendo los vértices para ver si ese fotograma esta bien.
Ahora estoy tratando de terminar una secuencia de 746 fotogramas. por culpa de este problema tuve que crear un keyframe en todos los cuadros para estar seguro de que el recorte sea perfecto, lo que me tomó varios días. Si este error no existiera habría sido fácil ver en cuales fotogramas no hacia falta ningun keyframe y ahorrar mucho trabajo

tested on ubuntu 18.04 64bits Good, This error is still in blender 2.79 as in blender 2.8. I have been using masks in blender for a long time and this problem always existed. At first I thought it was a problem with the mp4. But this happens in sequences of png and exr images as well. The mask looks bad in both the "Movie Clip Editor" and in the render of the Composition, when moving a vertex of the mask and pressing the escape key, the mask is displayed correctly. This makes it very difficult to find errors, because when looking at the "movie clip editor" it seems that the mask is always wrong, when reality is right. The only way to see the final result is to render or move frame by frame and move the vertices to see if that frame is fine. Now I'm trying to finish a sequence of 746 frames. Because of this problem I had to create a keyframe in all the boxes to be sure that the cut is perfect, which took me several days. If this error did not exist it would have been easy to see which frames did not lack any keyframes and save a lot of work Mensaje original: probado en ubuntu 18.04 64bits Buenas, Este error sigue estando tanto en blender 2.79 como en blender 2.8. hace mucho que uso las máscaras en blender y este problema siempre existió. Al principio pensé que era un problema con los mp4. Pero esto ocurre en secuencias de imágenes png y exr también. La máscara se ve mal tanto en el "Movie Clip Editor" como en el render de la Composición, al mover un vértice de la máscara y presionar la tecla escape, la mascara se muestra correctamente. Esto hace muy dificil encontrar errores, ya que al ver el "movie clip editor" parece que la mascara esta siempre mal, cuando enrealidad esta bien. La unica forma de ver el resultado final es hacer un render o moverse cuadro por cuadro e ir moviendo los vértices para ver si ese fotograma esta bien. Ahora estoy tratando de terminar una secuencia de 746 fotogramas. por culpa de este problema tuve que crear un keyframe en todos los cuadros para estar seguro de que el recorte sea perfecto, lo que me tomó varios días. Si este error no existiera habría sido fácil ver en cuales fotogramas no hacia falta ningun keyframe y ahorrar mucho trabajo

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Please don't open 4 year old reports like this, but create a new one.
https://developer.blender.org/maniphest/task/edit/form/1/

Please don't open 4 year old reports like this, but create a new one. https://developer.blender.org/maniphest/task/edit/form/1/
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43986
No description provided.