Fix T43986: VSE Mask Modifier don't move with video-Clip.

Now mask animation is offset to start of strip, instead of staying at frame 1!

Warning: this may break existing files, in case some would be using (hacking around!)
current bad behavior...